--- a/server/vine_comment/vine_comment/templates/plugin/base.html
+++ b/server/vine_comment/vine_comment/templates/plugin/base.html
@@ -35,7 +35,7 @@
                  <td id="logo" style="padding-left: 10px;" align="left">
                     <img src="//{{ request.META.HTTP_HOST }}{% static 'icons/logo.jpg' %}" />
                 </td>
-                <td id="webTag" style="FILTER: glow(color=#B4BBCF,strength=5)" width="auto" align="center"><font face="黑体" color="#8C96B5" size="6"><b>藤蔓评论</b></font></td>
+                <td id="webTag"  width="auto" align="center"><font face="黑体" color="white" size="6"><b>藤蔓评论</b></font></td>
                 
                 <td id = "quickMenu" style="padding-right: 10px;">
                     {% if user.is_authenticated %}
@@ -56,8 +56,8 @@
                 {% else %}
                   <li style="float:right">
                   <div class='btn-group' class="spanright">
-                    <a href="#" data-toggle="modal" data-target="#loginModal" class = 'btn btn-link'>登录</a>
-                    <a href="#" data-toggle="modal" data-target="#registerModal" class = 'btn btn-link'>注册</a>
+                    <a href="#" data-toggle="modal" data-target="#loginModal" class = 'btn btn-link  btn-sm' ><font face="黑体" color="white" ><b>登录</b></font></a>
+                    <a href="#" data-toggle="modal" data-target="#registerModal" class = 'btn btn-link btn-sm'><font face="黑体" color="white" ><b>注册</b></font></a>
                   </div>
                   </li>
                 {% endif %}
