--- a/server/vine_comment/vine_comment/templates/plugin/comment_list_raw.html
+++ b/server/vine_comment/vine_comment/templates/plugin/comment_list_raw.html
@@ -1,46 +1,6 @@
 {% load staticfiles %}
 
 <script>
-  function change_new_comment_num()
-  {
-		 if (document.getElementById("new_button").value == "收起"){
-			document.getElementById("new_button").value  = "展开";
-            document.getElementById("new_img").src = "//{{ request.META.HTTP_HOST }}{% static 'icons/shouqi.jpg' %}"
-            $.get("/ajax/showmsg/new/comment/max",{})
-            .done(function(data) {
-              $('#commet_new').html(data);
-            });
-			} else {
-			document.getElementById("new_button").value  = "收起";
-            document.getElementById("new_img").src = "//{{ request.META.HTTP_HOST }}{% static 'icons/zhankai.jpg' %}"
-            $.get("/ajax/showmsg/new/comment/min", {})
-            .done(function(data) {
-              $('#commet_new').html(data);
-            });
-		}
-		
-		//刷新
-  }
-  
-  function change_hot_comment_num()
-  {
-		 if (document.getElementById("hot_button").value == "收起"){
-			document.getElementById("hot_button").value  = "展开";
-            document.getElementById("hot_img").src = "//{{ request.META.HTTP_HOST }}{% static 'icons/shouqi.jpg' %}"
-            $.get("/ajax/showmsg/hot/comment/max",{})
-            .done(function(data) {
-              $('#commet_hot').html(data);
-            });
-			} else {
-			document.getElementById("hot_button").value  = "收起";
-            document.getElementById("hot_img").src = "//{{ request.META.HTTP_HOST }}{% static 'icons/zhankai.jpg' %}"
-            $.get("/ajax/showmsg/hot/comment/min", {})
-            .done(function(data) {
-              $('#commet_hot').html(data);
-            });
-		}
-  }
-  
   function change_new_comment_num_new()
   {
 		 if (document.getElementById("new_button").innerHTML == "展开"){
@@ -102,20 +62,24 @@
 .ha_bor{border:none;}
 </style>
 
-{% include 'plugin/comments_plugin_new.html' %}
-<!--
-<button id="new_button" style="float:right" type="button"  class = 'btn btn-sm btn-default ha_bor'  onclick="change_new_comment_num();"  value="收起"><img id = "new_img" src="//{{ request.META.HTTP_HOST }}{% static 'icons/zhankai.jpg' %}" /></button>
--->
-<button id="new_button" style="float:right" type="button"  class = 'btn btn-sm btn-link '  onclick="change_new_comment_num_new();"  >展开</button>
-<br>
-<br>
-{% include 'plugin/comments_plugin_hot.html' %}
-<!--
-<button id="hot_button" style="float:right" type="button"  class = 'btn btn-sm btn-link ha_bor'  onclick="change_hot_comment_num();" value="收起"><img id = "hot_img" src="//{{ request.META.HTTP_HOST }}{% static 'icons/zhankai.jpg' %}" /></button>
--->
-<button id="hot_button" style="float:right" type="button"  class = 'btn btn-sm btn-link '  onclick="change_hot_comment_num_new();">展开</button>
-<br>
-<br>
 
-{% include 'plugin/comments_plugin_relevant.html' %}
-<button id="relevant_button" style="float:right" type="button"  class = 'btn btn-sm btn-link '  onclick="change_relevant_comment_num_new();">展开</button>
+<div id="new_msg_list" style="display:'';">
+    {% include 'plugin/comments_plugin_new.html' %}
+    <!--
+    <button id="new_button" style="float:right" type="button"  class = 'btn btn-sm btn-default ha_bor'  onclick="change_new_comment_num();"  value="收起"><img id = "new_img" src="//{{ request.META.HTTP_HOST }}{% static 'icons/zhankai.jpg' %}" /></button>
+    -->
+    <button id="new_button" style="float:right" type="button"  class = 'btn btn-sm btn-link '  onclick="change_new_comment_num_new();"  >展开</button>
+</div>
+
+<div id="hot_msg_list" style="display: none;">
+    {% include 'plugin/comments_plugin_hot.html' %}
+    <!--
+    <button id="hot_button" style="float:right" type="button"  class = 'btn btn-sm btn-link ha_bor'  onclick="change_hot_comment_num();" value="收起"><img id = "hot_img" src="//{{ request.META.HTTP_HOST }}{% static 'icons/zhankai.jpg' %}" /></button>
+    -->
+    <button id="hot_button" style="float:right" type="button"  class = 'btn btn-sm btn-link '  onclick="change_hot_comment_num_new();">展开</button>
+</div>
+
+<div id="relevant_msg_list" style="display: none;">
+    {% include 'plugin/comments_plugin_relevant.html' %}
+    <button id="relevant_button" style="float:right" type="button"  class = 'btn btn-sm btn-link '  onclick="change_relevant_comment_num_new();">展开</button>
+</div>
