--- a/server/vine_comment/vine_comment/templates/plugin/comment_list.html
+++ b/server/vine_comment/vine_comment/templates/plugin/comment_list.html
@@ -75,7 +75,7 @@
                 </li>
 
                 <li>
-                <a href="#" data-action="sort" data-sort="desc" onclick="show_hot_msg_list();">最火评论<i aria-hidden="true" class="icon-checkmark"></i></a>
+                <a href="#" data-action="sort" data-sort="desc" onclick="show_hot_msg_list();">最热评论<i aria-hidden="true" class="icon-checkmark"></i></a>
                 </li>
 
                 <li>
