Add the you_like_text id

--- a/server/vine_comment/vine_comment/templates/plugin/comment_list.html
+++ b/server/vine_comment/vine_comment/templates/plugin/comment_list.html
@@ -84,7 +84,7 @@
             </ul>
         </li>
         <li style="text-align:left;float:left; ">
-            <a href="#" onclick="show_you_like();"><b>猜你喜欢</b></a>
+            <a href="#" onclick="show_you_like();"><b id="you_like_text">猜你喜欢</b></a>
         </li>
         
         <li style="float:right">
