--- a/server/vine_comment/vine_comment/templates/auth/auth_all__li.html
+++ b/server/vine_comment/vine_comment/templates/auth/auth_all__li.html
@@ -6,7 +6,7 @@
 
  {% if user.is_authenticated %}
 	 <li class="dropdown">
-		 <a class="dropdown-toggle" data-toggle="dropdown" href="/home/">
+		 <a class="dropdown-toggle" data-toggle="dropdown" href="#">
 			 {{ user.username }}<span class="caret"></span>
 		 </a>
 		 <ul class="dropdown-menu">
