Modify the CSS of the comment List
Modify the CSS of the comment List.
doing......

--- a/server/vine_comment/vine_comment/templates/plugin/comments_plugin_new.html
+++ b/server/vine_comment/vine_comment/templates/plugin/comments_plugin_new.html
@@ -25,50 +25,73 @@
     }
   </script>
 
+  
+ <!-- 修改中 --> 
+
+{% load staticfiles %}                    
+                    
 <div id="commet_new">  
         <div id="commetList_new">
-            <ul class="list-group">
+            <ul style="list-style-type:none; padding:10px;margin:10px; ">
             {% for message in p_comment_new.object_list %}
-                 <li class="list-group-item">
-                     <a href="{{message.comment_board.url}}" target="_blank">
-                       <span class="comment-text" id="comment_str_{{message.id}}">{{message.comment_str}}</span>
-                   </a></br>
-                    <strong>{% if message.author %}{{ message.author.user }}{% else %}{{ message.author_ip }}{% endif %}</strong>
-                     <span>
-                       <span class='comment-time'>于 {{ message.time_added|naturaltime }}</span>
-                     </span>
-                     <span style="float:right">
-                      <a href="javascript:void(0);" id="up_comment_{{message.id}}" onclick="up('{{message.id}}');return false;">
-                        {% if user.id in message.up_users %}
-                        <i class="fa fa-thumbs-up"></i>
-                        {% else %}
-                        <i class="fa fa-thumbs-o-up"></i>
-                        {% endif %}
-                        +<span>{{ message.up_users|length }}</span>
-                      </a>
-                      {# TODO: 添加tips，说明icon功能，不然留言icon字太小。 #}
-                      <a href="javascript:void(0);" id="reply_comment_new{{message.id}}" onclick="expandReplyNew('{{message.id}}');return false;">
-                        <i class="fa fa-comments-o"></i>
-                        <span>{{ message.replies|length }}</span>
-                      </a>
-                     </span>
-                     <div id="detailDivNew{{message.id}}" style="display:none;margin-top:10px">
-                     </div>
+                 <li>
+                 <div>
+                      <table cellpadding="0" cellspacing="0" border="0" width="100%" sy>
+                        <tr><tbody>  
+                            <td>
+                                <span class="user">
+                                    <img class="vc-image" width=50 height=50  data-role="user-avatar" src="//{{ request.META.HTTP_HOST }}{% static 'icons/test.jpg' %}" alt="Avatar">
+                                </span>
+                            </td>
+                            <td>
+                                <b></b>
+                            </td>
+                            <td style="float:left; ">
+                                <strong>{% if message.author %}{{ message.author.user }}{% else %}{{ message.author_ip }}{% endif %}</strong>
+                                <span>
+                                    <span class='comment-time'>于 {{ message.time_added|naturaltime }}</span>
+                                </span>
+                                </br>
+                               <a href="{{message.comment_board.url}}" target="_blank">
+                               <span class="comment-text" id="comment_str_{{message.id}}">{{message.comment_str}}</span>
+                                </a>
+                                <br>
+                                 <span style="float:left">
+                                  <a href="javascript:void(0);" id="up_comment_{{message.id}}" onclick="up('{{message.id}}');return false;">
+                                    {% if user.id in message.up_users %}
+                                    <i class="fa fa-thumbs-up"></i>
+                                    {% else %}
+                                    <i class="fa fa-thumbs-o-up"></i>
+                                    {% endif %}
+                                    +<span>{{ message.up_users|length }}</span>
+                                  </a>
+                                  {# TODO: 添加tips，说明icon功能，不然留言icon字太小。 #}
+                                  <a href="javascript:void(0);" id="reply_comment_new{{message.id}}" onclick="expandReplyNew('{{message.id}}');return false;">
+                                    <i class="fa fa-comments-o"></i>
+                                    <span>{{ message.replies|length }}</span>
+                                  </a>
+                                 </span>
+                                 <div id="detailDivNew{{message.id}}" style="display:none;margin-top:10px">
+                                 </div>
 
-                     <div id="replyDivNew{{message.id}}" style="display:none;margin-top:10px">
-                     <br>
-                       <div id="repliesofNew{{message.id}}">
-                       {% include 'common/reply.html' %}
-                       </div>
-                       <div name="reply{{message.id}}" class="input-group">
-                         <textarea rows="5" style="width:100%;height:34px;resize:none" id="replyNew{{message.id}}" name="reply" placeholder="可输入5-140个字"></textarea>
-                         <span class="input-group-btn">
-                           <button class="btn btn-default submitComment" data-loading-text="回复中" onclick="replyNew('{{message.id}}')" type="button">回复</button>
-                         </span>
-                       </div><!-- /input-group -->
-                     </div>
-                     <br>
+                                 <div id="replyDivNew{{message.id}}" style="display:none;margin-top:10px">
+                                 <br>
+                                   <div id="repliesofNew{{message.id}}">
+                                   {% include 'common/reply.html' %}
+                                   </div>
+                                   <div name="reply{{message.id}}" class="input-group">
+                                     <textarea rows="5" style="width:100%;height:34px;resize:none" id="replyNew{{message.id}}" name="reply" placeholder="可输入5-140个字"></textarea>
+                                     <span class="input-group-btn">
+                                       <button class="btn btn-default submitComment" data-loading-text="回复中" onclick="replyNew('{{message.id}}')" type="button">回复</button>
+                                     </span>
+                                   </div><!-- /input-group -->
+                                 </div>
+                            </td>
+                        </tr></tbody>  
+                     </table>                            
+                 </div>
                   </li>
+                  <br>
             {% endfor %}
             </ul>
         </div>
