templates/registration: adjust template include/extends from site/plugin

--- a/server/vine_comment/registration/templates/registration/registration_complete_simple.html
+++ b/server/vine_comment/registration/templates/registration/registration_complete_simple.html
@@ -1,4 +1,4 @@
-{% extends "site/comments/base.html" %}
+{% extends "registration/plugin_base.html" %}
 
 {% block title %}注册成功了...一半{% endblock %}
 
