--- a/server/vine_comment/registration/templates/registration/activate.html
+++ b/server/vine_comment/registration/templates/registration/activate.html
@@ -3,7 +3,7 @@
 {% block title %}账户激活{% endblock %}
 
 {% block content %}
-  <h1>你的账户已成功激活。</h1>
+  <h1>账户激活</h1>
   {% load humanize %}
   {% if account %}
     <p>感谢你的注册，现在你可以<a href="/accounts/login/">登陆了</a>。</p>
