registration: update activate words

--- a/server/vine_comment/registration/templates/registration/activation_complete.html
+++ b/server/vine_comment/registration/templates/registration/activation_complete.html
@@ -3,6 +3,6 @@
 {% block title %}激活成功！{% endblock %}
 
 {% block content %}
-<h1>恭喜！</h1>
+<h1>激活成功！</h1>
 <p>请访问<a href='/'>主站</a></p>
 {% endblock %}
