refine some css and js fine positions

--- a/server/vine_comment/vine_comment/templates/site/base.html
+++ b/server/vine_comment/vine_comment/templates/site/base.html
@@ -117,7 +117,7 @@
 <script src="{% static 'js/comment_updown.js' %}"></script>
 <script type="text/javascript">$('a').tooltip();</script>
 <!-- XXX: use popup_message in commentBoard.js -->
-<script type="text/javascript" src="{% static "plugin/commentBoard.js" %}"></script>
+<script type="text/javascript" src="{% static 'js/commentBoard.js' %}"></script>
   <link href="{% static 'bootstrap-dialog/css/bootstrap-dialog.min.css' %}" rel="stylesheet" type="text/css" />
   <script src="{% static 'bootstrap-dialog/js/bootstrap-dialog.min.js' %}"></script>
 
