css has c style comments

--- a/server/vine_comment/static/css/base.css
+++ b/server/vine_comment/static/css/base.css
@@ -16,7 +16,7 @@ h1, h2, h3, h4, h5, p, div, form {
 max-width: 1000px;
 }
 
-<!-- You can use col-md-* with it. -->
+/* You can use col-md-* with it. */
 .col-block {
 padding: 15px 15px 15px 15px;
 margin: 0 -15px 15px;
