css: fix css bug

--- a/server/vine_comment/vine_comment/templates/plugin/comment_iframe_view.html
+++ b/server/vine_comment/vine_comment/templates/plugin/comment_iframe_view.html
@@ -1,6 +1,6 @@
 
 {% load staticfiles %}
-<link rel="stylesheet" href="//{{ request.META.HTTP_HOST }}{% static 'js/comment_styles.css' %}" type="text/css" media="all" />
+<link rel="stylesheet" href="//{{ request.META.HTTP_HOST }}{% static 'css/comment_styles.css' %}" type="text/css" media="all" />
 <script type="text/javascript" src="//{{ request.META.HTTP_HOST }}{% static 'plugin/floatCommentBoard.js' %}"></script>
 
 <style>
