--- a/server/vine_comment/vine_comment/templates/plugin/base.html
+++ b/server/vine_comment/vine_comment/templates/plugin/base.html
@@ -24,7 +24,7 @@
 <link rel="stylesheet" href="{% static 'css/comment_styles.css' %}" type="text/css" media="all" />
 </head>
 
-<body style = "background-color: #f8f8f8;">
+<body style = "background-color: white;">
 
 <div id="commentBoard" >
   <div id="boardRight" >
